correction de plusieurs erreurs pour la config

--- a/templates/ESW2.j2
+++ b/templates/ESW2.j2
@@ -1,6 +1,7 @@
 hostname {{hostname}}
 {% for vlan in vlans%}
 vlan {{vlan.vlan_id}}
+exit
 {% endfor %}
 {% for interface in interfaces %}
 interface {{interface.name}}
@@ -9,8 +10,8 @@ switchport mode {{interface.mode}}
 switchport {{interface.mode}} vlan {{interface.vlan_id}}
 {%endif%}
 {% if interface.mode == "trunk"%}
-switchport {{interface.mode}} encapsulation dot1q
 switchport mode {{interface.mode}}
+switchport {{interface.mode}} allowed vlan all
 {%endif%}
 no shut
 exit
