correction d'erreurs, configuration entièrement fonctionnelle

--- a/templates/ESW2.j2
+++ b/templates/ESW2.j2
@@ -10,6 +10,7 @@ switchport mode {{interface.mode}}
 switchport {{interface.mode}} vlan {{interface.vlan_id}}
 {%endif%}
 {% if interface.mode == "trunk"%}
+switchport {{interface.mode}} encapsulation dot1q
 switchport mode {{interface.mode}}
 switchport {{interface.mode}} allowed vlan all
 {%endif%}
