--- a/templates/R2.j2
+++ b/templates/R2.j2
@@ -1,7 +1,7 @@
 hostname {{hostname}}
 {% for interface in interfaces %}
 interface {{interface.name}}
-encapsulation dot1q {{interface.vlan_id}} native
+encapsulation dot1q {{interface.vlan_id}}
 ip address {{interface.ip}} {{interface.mask}}
 no shut
 exit
