--- a/templates/R2.j2
+++ b/templates/R2.j2
@@ -1,8 +1,10 @@
 hostname {{hostname}}
 {% for interface in interfaces %}
 interface {{interface.name}}
+{% if interface.name.endwith('99') or interface.name.endwith('20') or interface.name.endwith('10')}
 encapsulation dot1q {{interface.vlan_id}}
 ip address {{interface.ip}} {{interface.mask}}
+{%endif%}
 no shut
 exit
 {% endfor %}
