--- a/templates/ESW2.j2
+++ b/templates/ESW2.j2
@@ -5,16 +5,15 @@ exit
 {% endfor %}
 {% for interface in interfaces %}
 interface {{interface.name}}
-{% if interface.mode == "access"%}
+{% if interface.mode == "access" %}
 switchport mode {{interface.mode}}
-switchport {{interface.mode}} vlan {{interface.vlan_id}}
-{%endif%}
-{% elif interface.mode == "trunk"%}
+switchport {{interface.mode}} vlan {{interface.vlan_id}}    
+{% elif interface.mode == "trunk" %}
 switchport {{interface.mode}} encapsulation dot1q
 switchport mode {{interface.mode}}
 switchport {{interface.mode}} allowed vlan all
-{% else interface.mode is not defined%}
-
+{% elif interface.mode is not defined %}
+ip address {{interface.ip}} {{interface.mask}}
 {%endif%}
 no shut
 exit
